[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/weapons/tex_paladin.png" type="Texture" id=1]
[ext_resource path="res://assets/weapons/tex_paladin_hammer.png" type="Texture" id=2]
[ext_resource path="res://scenes/weapons/_base/_BaseWeapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/weapons/paladin's hammer/PaladinHammer.gd" type="Script" id=4]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.482143, 1 )
colors = PoolColorArray( 1, 0.84375, 0, 1, 0.652832, 0.652832, 0.652832, 0.580357, 0.678431, 0.678431, 0.678431, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
resource_local_to_scene = true
lifetime_randomness = 0.9
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.9
angular_velocity = 500.0
angular_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 15.0
scale_random = 0.5
color_ramp = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 45, 33 )

[sub_resource type="Animation" id=5]
length = 0.9
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("HurtBox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.35, 0.55, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 315.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Trails:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.24, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="PaladinHammer" instance=ExtResource( 3 )]
script = ExtResource( 4 )
description = "The hammer can stop projectiles. Also causes stun on critical hit."
heat_per_shot = 0.0
heat_dissipation = 5.0
crit_chance = 0.3
fire_mode = 3
recoil = -1500
cam_shake_intensity = 20.0
melee_damage = 15.0
melee_crit_stun_time = 5.0
melee_knockaback = 1500

[node name="SlotIcon" parent="." index="0"]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="MuzzleParticles" parent="Muzzle" index="0"]
visible = false
process_material = SubResource( 3 )

[node name="Sprite" parent="." index="2"]
texture = ExtResource( 1 )

[node name="Hammer" type="Sprite" parent="." index="3"]
visible = false
modulate = Color( 1, 1, 1, 0 )
rotation = 6.28319
texture = ExtResource( 2 )
offset = Vector2( -100, -3.5 )

[node name="Trails" type="Node2D" parent="Hammer" index="0"]
visible = false

[node name="Trail0" type="Sprite" parent="Hammer/Trails" index="0"]
modulate = Color( 1, 1, 1, 0.392157 )
rotation = -0.261799
texture = ExtResource( 2 )
offset = Vector2( -100, -3.5 )

[node name="Trail1" type="Sprite" parent="Hammer/Trails" index="1"]
modulate = Color( 1, 1, 1, 0.392157 )
rotation = -0.523599
texture = ExtResource( 2 )
offset = Vector2( -100, -3.5 )

[node name="Trail2" type="Sprite" parent="Hammer/Trails" index="2"]
modulate = Color( 1, 1, 1, 0.392157 )
rotation = -0.785398
texture = ExtResource( 2 )
offset = Vector2( -100, -3.5 )

[node name="HurtBox" type="Area2D" parent="Hammer" index="1"]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hammer/HurtBox" index="0"]
position = Vector2( -146, -4.00007 )
shape = SubResource( 4 )

[node name="Anim" type="AnimationPlayer" parent="Hammer" index="2"]
anims/swing = SubResource( 5 )
[connection signal="area_entered" from="Hammer/HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="Hammer/HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="animation_finished" from="Hammer/Anim" to="." method="_on_Anim_animation_finished"]
